css/civicrm.css
/* ... */
#crm-container div.buttons INPUT,
#crm-container div.buttons SELECT {
    FONT-SIZE      : 0.9em; 
    VERTICAL-ALIGN : top !important
}


#crm-container div.buttons #actions {
    TEXT-ALIGN : left; 
    /*WIDTH: 89%;*/ 
    FLOAT      : left
}
#crm-container div.buttons ul#actions {
    list-style-type:none;
    padding-left:0px;
}
#crm-container div.buttons #actions li {
    float:left;
    padding:0px;
    margin:0 5px 0 0;
}


#crm-container .separator {
    border-bottom  : solid 2px #ccc;
}

/* reports */

#crm-container .report-layout {
    border           : none;
}

#crm-container .reports-header-right {
    text-align       : right;
}

#crm-container .report-contents {
    background-color : #F5F5F5;	       
    border           : 1px solid #CDCDC3;
    padding          : 4px;
    width            : 20%;
    white-space      : normal;
    font-size        : 0.95em;
}

#crm-container .report-contents-right {
    border           : 1px solid #CDCDC3;
    padding          : 4px;
    font-size        : 0.95em;
    text-align	    : right;
}

#crm-container table.report-layout td {
    padding: 4px;
    border-bottom: 1px solid #CDCDC3;
    vertical-align   : top;
}

#crm-container table.report-layout tr {
    font-size        : 0.95em; 
}

#crm-container .report-label {
    text-align        : right;
    font-weight       : bold;
}

#crm-container table.report-layout th.report-contents {
    background-color : #F5F5F5;	       

}

#crm-container table.report-layout th.statistics {
    width            : 5%;
    white-space      : nowrap;
}

/*override default pager for report*/
.report-pager .crm-pager-nav a {
    color: #000000;
}

#crm-container .report-layout .sticky-header {
    background-color  : #DCDCDC;
    border            : 1px solid #DCDCDC;
}



#crm-container table.view-layout {
    margin: 0em;
    border-collapse: collapse;
    border: 0px none;
}

#crm-container table.view-layout .label {
    color          : DimGray; 
    FONT-SIZE      : 0.95em; 
    VERTICAL-ALIGN : top; 
    FONT-WEIGHT    : bold; 
    MARGIN-RIGHT   : 10px;
    background-color:#EEEEEE;
    width: 20%;
}

#crm-container th.contriTotalRight {
    border-right: 1px solid #999999;
}

#crm-container th.contriTotalLeft {
    border-left: 1px solid #999999;
}

#crm-container .collapsed {
    background: url("../i/TreePlus.gif") no-repeat 0 0;
    padding-left: 19px;
    cursor:pointer
}

#crm-container .expanded {
    background: url("../i/TreeMinus.gif") no-repeat 0 0;
    padding-left: 19px;
    cursor:pointer
}

/* TimeEntry styles */
.timeEntry_control {
    vertical-align: middle;
    margin-left: 2px;
}
* html .timeEntry_control { /* IE only */
    margin-top: -4px;
}

/* This is the style for the trigger icon. The margin-bottom value causes the icon to shift down to center it. */
.ui-datepicker-trigger {
    margin-top: 4px;
    margin-bottom: -6px;
}

#crm-container .cke_editor {
    border: 0px none;
}


/* Set/alter ICONS */

#crm-container div#printer-friendly {
    float: right;
    position:relative;
    margin: 0px 0px 0px 0px;
}

#crm-container .order-icon {
    height: 15px;
    width:  10px;
    padding-top: 4px;
    padding-right: 4px;
}

/* autocomplete */

.ac_results {
    background: transparent url(../i/dropdown-pointer.gif) no-repeat 25px 1px;
    padding-top: 5px;
    border:none;
}

.ac_results-inner,
.crm-create-new-list-inner,
.crm-contact-actions-list-inner  {
    background-color:#2f2f2e;
    padding:4px;
}

/* crm button style */

#crm-container .crm-submit-buttons,
#crm-container .action-link {
    height:25px;
    margin: 4px 0px 4px 2px;
}

#crm-container .crm-button {
    border:medium none;
    cursor:pointer;
    display:block;
    float:left !important;
    overflow:hidden;
    text-shadow:0 1px 0 black;	
    margin:0px 12px 0 0;
    padding:0px 4px;
    cursor: pointer;
}
#crm-container .crm-button input  {
    background:none;
    border:medium none;
    color:#FFF;
    cursor:pointer;
    font-size:12px;
    height:25px;
    font-weight:normal;
    margin:0 0 0 0px;
    padding:0px 8px 4px 4px;
}
#crm-container .crm-button-type-cancel {margin-left:20px;}
#crm-container .crm-button-type-cancel input { color:#E6E6DC!important; }

#crm-container a.button,
#crm-create-new-link,
#crm-contact-actions-link,
#crm-container a.button:link,
#crm-container input.form-submit,
#crm-container .crm-button {
    text-shadow:0 1px 0 black;	
    background:transparent url(../i/crm-button-bg.gif) repeat-x top left;
    color: #FFF;
    font-size:12px;
    font-weight:normal;
    margin-right: 6px;
    padding: 2px 6px;
    text-decoration: none;
    cursor: pointer;
    border:1px solid #3e3e3e;
    }
    #crm-container input.form-submit { padding:0px 6px 2px;}

#crm-container a.button,
#crm-create-new-link,
#crm-contact-actions-link,
#crm-container a.button:link{
    display: block;
    float: left;
    }

#crm-create-new-link span,
#crm-contact-actions-link span,
#crm-container a.button span {
    display: block;
    line-height: 14px;
    padding:2px 0px;
} 

.button .red {
    background-image: url(../i/icons/jquery-ui-FFFFFF.png);
}

#crm-container a.button:active {
    color: #000;
    outline: none; /* hide dotted outline in Firefox */
}

#crm-container .crm-button:hover,
#crm-container a.button:hover { background-position:0px -25px; }



/* create new XXX style (drupal block) */ 

#crm-create-new-wrapper,
#crm-contact-actions-wrapper{
	position:relative;
	z-index:5;
	}

#crm-create-new-list,
#crm-contact-actions-list{
	position:absolute;
	display:none;
	top:24px;
	left:0px;
	z-index: 100;
	width:180px;
	}


#crm-contact-actions-list .activities-block {
	color:#a7a7a7;
	font-size: 11px;
	padding:4px;
	margin-top:4px;
	border-top: 1px solid #a7a7a7;
	}
#crm-contact-actions-list .activities-block select {
	margin-top:4px;
	}

/* setup for icons */

.ac_results ul li {background-image:url('');}

.ui-icon {background-image: url("../i/icons/jquery-ui-52534D.png")}
/* ... */

